--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,20 +23,21 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install Hatch
-        run: |
-          python -m pip install --upgrade pip
-          pip install hatch
+      - name: Install pypa/build
+        run: >-
+          python -m
+          pip install
+          build
+          --user
 
-      - name: Build with Hatch
-        run: |
-          hatch build
+      - name: Build a binary wheel and a source tarball
+        run: >-
+          python -m
+          build
+          --sdist
+          --wheel
+          --outdir dist/
+          .
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages_dir: dist
-          verbose: true
-
-      - name: Clean distribution directory
-        run: rm -rf dist/*
