--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,16 @@ version = "0.3.1"
 description = 'This package extends the Ariadne library by adding a GraphQL HTTP handler designed for use in AWS Lambda environments.'
 readme = "README.md"
 requires-python = ">=3.8"
-license = "MIT"
+license = { file = "LICENSE" }
 keywords = []
 authors = [
   { name = "Mirumee Software", email = "it@mirumee.com" },
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: BSD License",
+  "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
